--- a/src/User.module.css
+++ b/src/User.module.css
@@ -9,6 +9,11 @@
   z-index: 2;
 }
 
+.addressValue
+{
+  color:white;
+}
+
 .user:hover .name {
 	transform: translateX(-30px);
   background-color: #ef5350;
